--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/sugarcookies.html">Sugar Cookies</a>
+    <ul>
+        <li><a href="./recipes/sugarcookies.html">Sugar Cookies</a></li>
+        <li><a href="./recipes/tacosoup.html">Taco soup</a></li>
+    </ul>
     
 </body>
 </html>
