Add background color to the page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="recipes" text-align="center">
         <li><a href="./recipes/sugarcookies.html">Sugar Cookies</a></li>
         <li><a href="./recipes/tacosoup.html">Taco soup</a></li>
     </ul>
