--- a/recipes/sugarcookies.html
+++ b/recipes/sugarcookies.html
@@ -11,7 +11,7 @@
     <img src="https://hips.hearstapps.com/hmg-prod/images/230929-delish-sugar-cookies-005-ab-hi-res-index-652f8b7cb2454.jpg?crop=0.6666666666666667xw:1xh;center,top&resize=1200:*" width="399"
      height="300" alt="Sugar Cookie photo">
      <h3>Delicious and easy Sugar cookies for breakfast</h3>
-     <ul>
+     <ul class="ing">
         <li>Flour</li>
         <li>Leaveners</li>
         <li>Butter</li>
@@ -19,10 +19,10 @@
         <li>Egg</li>
      </ul>
      <h3>Steps:</h3>
-     <ol>
+     <div class="centerdiv"><ol class="ej">
         <li>Beat sugar, butter, egg, and vanilla in one bowl; mix flour and leaveners in another.</li>
         <li>Gradually blend the flour mixture into the butter mixture.</li>
         <li>Roll the dough into balls and bake until the edges are golden.</li>
-     </ol>
+     </ol></div>
 </body>
 </html>
